--- a/eye-extended@als.kz/stylesheet.css
+++ b/eye-extended@als.kz/stylesheet.css
@@ -1,2 +1,2 @@
 /* SPDX-License-Identifier: GPL-3.0-or-later */
-/* SPDX-FileCopyrightText: Contributors to the eye-extended-shell-extension. */
+/* SPDX-FileCopyrightText: Contributors to the Eye and Mouse Extended GNOME extension. */
